<resources>
    <string name="app_name">RunYoCourt</string>
    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Menu</string>
    <string name="nav_header_title">Run Yo Court</string>
    <string name="nav_header_subtitle">JaDuBe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_court">Find Court</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_play">Play</string>
    <string name="menu_account">Account</string>
    <string name="menu_share">Share</string>
    <string name="menu_register">Register a court</string>
</resources>
