<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_court"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_court"/>
        <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_friends"/>
        <item
                android:id="@+id/nav_play"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_play"/>
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_account"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_register"/>
        </menu>
    </item>

</menu>
